<resources>
    <string name="app_name">Tasks App</string>
    <string name="all_cards">All Cards</string>
    <string name="add_cards">Add Cards</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>

    <string name="hello">Hello</string>
    <string name="do_you_want_to_delete">Do you want to delete this task?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="active">Active</string>
    <string name="draft">Draft</string>
    <string name="current_user_shared_pref">current_user_shared_pref</string>
    <string name="Booked">Booked</string>
    <string name="search">Search</string>
    <string name="active_tasks">Active Tasks</string>
    <string name="creators">Creators</string>
    <string name="info">Info</string>
    <string name="cards">Cards</string>
    <string name="name_surname">Name Surname</string>
    <string name="math_teacher">Math teacher</string>
    <string name="specialization">Specialization</string>
    <string name="name">Name:</string>
    <string name="miss">—</string>
    <string name="description_with_colon">Description:</string>
    <string name="description">Description</string>
    <string name="additional_information">Additional Information</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="type_of_work">Type of work:</string>
    <string name="other">Other</string>
    <string name="become_a_creator">Become a creator</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up_with_gaps">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_gap">Sign in</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="profession">Profession</string>
    <string name="specialization_with_colon">Specialization:</string>
    <string name="title">Title</string>
    <string name="payment">Payment:</string>
    <string name="prepayment">Prepayment:</string>
    <string name="no">No</string>
    <string name="creator">Creator</string>
    <string name="dates">Dates</string>
    <string name="book_date">Book date</string>
    <string name="your_booking">Your booking</string>
    <string name="was_booked">Was booked</string>
    <string name="create_change_task">Create/change task</string>
    <string name="your_title">Your title</string>
    <string name="describe_your_task">Describe your task</string>
    <string name="new_tag_to_add">New tag to add</string>
    <string name="add">Add</string>
    <string name="clear_tags">Clear tags</string>
    <string name="fix_price">Fix price</string>
    <string name="dollar">$</string>
    <string name="by_agreement">By agreement</string>
    <string name="with_prepayment">With prepayment</string>
    <string name="without_prepayment">Without prepayment</string>
    <string name="add_book_date">Add book date +</string>
    <string name="submit">Submit</string>
    <string name="your_specialization">Your specialization</string>
    <string name="change">Change</string>
    <string name="new_name">New name:</string>
    <string name="your_country">Your country</string>
    <string name="your_city">Your city</string>
    <string name="booked_card">Booked card:</string>
    <string name="card_title">Card title</string>
    <string name="on_date">On date:</string>
    <string name="booked_on">Booked on</string>
    <string name="tags">Tags</string>
    <string name="seconds_ago">seconds ago</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="cost_num">%1$.2f $</string>
</resources>